--- a/css/sass/pages/_ux.scss
+++ b/css/sass/pages/_ux.scss
@@ -15,7 +15,7 @@
 	}
 	p {
 		font-size: 0.7em;
-		margin: 0 1em 2em;
+		margin: 0 2em 2em;
 	}
 }
 
@@ -33,9 +33,24 @@
 	}
 }
 
+.ux-slide-02 {
+	.screens-container {
+		margin: 0 auto;
+		width: 55%;
+	}	
+	.screen {
+		img {
+			width: 100%;
+			margin-bottom: 20px;
+		}
+	}
+} 
+
 .placeholder {
 	height: 100px;
 }
+
+
 
 /**
  * LARGER THAN MOBILE
@@ -48,7 +63,28 @@
  * LARGER THAN PHAMBLET
  */
 @media (min-width: 550px) {
-
+		.ux-slide-02 {
+		display: flex;
+		.wrapper-container {
+		display: flex;	
+		flex-wrap: wrap;
+		max-width: 960px;
+		margin: 0 auto;
+		align-items: center;
+		justify-content: center;
+		flex-direction: column;
+			.screens-container {
+				display: flex;
+				flex-wrap: wrap;
+				justify-content: space-between;
+				margin: 0 auto;
+				width: 60%;
+			}	
+			.screen {
+				flex: 0 1 40%;
+			}
+		}
+	}
 }
 
 /**
@@ -74,31 +110,15 @@
 	}
 
 	.ux-slide-02 {
-		display: flex;
 		.wrapper-container {
-		display: flex;	
-		flex-wrap: wrap;
-		max-width: 960px;
-		margin: 0 auto;
-		align-items: center;
-		justify-content: center;
-		flex-direction: column;
 			.screens-container {
-				margin: 0 auto;
 				width: 80%;
-				display: flex;
-				justify-content: space-between;
 			}	
 			.screen {
-				// width: 20%;
-				// flex: 0 1 calc(20% - 1em);
 				flex: 0 1 20%;
-				img {
-					width: 100%;
-				}
 			}
 		}
-	} 
+	}
 }
 
 
