--- a/css/sass/main.scss
+++ b/css/sass/main.scss
@@ -18,6 +18,7 @@
 @import "pages/ux";
 @import "pages/interactive";
 @import "pages/prototype";
+@import "pages/resume";
 
 
 // Additional styles to think about
