--- a/css/main.css
+++ b/css/main.css
@@ -193,8 +193,10 @@ a {
    ========================================================================== */
 .logo {
   position: fixed;
-  top: 10px;
+  top: 4%;
+  left: 2%;
   z-index: 25;
+  margin: 0;
   display: none; }
   .logo img {
     width: 35%; }
@@ -222,7 +224,8 @@ nav {
         text-decoration: none;
         color: inherit; }
 
-.main-nav-hide {
+.main-nav-hide,
+.resume-page-hide {
   display: none; }
 
 /**
@@ -230,8 +233,8 @@ nav {
  */
 .navbar-toggle {
   position: fixed;
-  top: 20px;
-  right: 20px;
+  top: 2%;
+  right: 2%;
   z-index: 20;
   cursor: pointer; }
   .navbar-toggle #menu {
@@ -265,7 +268,7 @@ nav {
   .watermark-text .rath {
     font-family: avant_bold, sans-serif; }
 
-@media (max-width: 400px) {
+@media (max-width: 550px) {
   .watermark-text {
     visibility: hidden; } }
 
@@ -278,7 +281,8 @@ nav {
   right: 2%;
   bottom: 2%; }
   .social-main .contact,
-  .social-main .contact-item {
+  .social-main .contact-item,
+  .social-main .resume-btn {
     text-transform: uppercase;
     font-family: Gotham_thin, sans-serif;
     font-size: 14px;
@@ -286,10 +290,14 @@ nav {
     margin-left: 5px; }
   .social-main .contact {
     margin-right: 5px; }
-  .social-main .contact-item:hover {
-    color: #fff; }
+  .social-main .resume-btn {
+    font-family: avant_medium, sans-serif;
+    cursor: pointer; }
+  .social-main .resume-tube-separator {
+    font-family: avant_book, sans-serif;
+    cursor: default; }
 
-@media (max-width: 400px) {
+@media (max-width: 550px) {
   .social-main {
     visibility: hidden; } }
 
@@ -537,6 +545,23 @@ hr {
 /* Larger than tablet */
 /* Larger than desktop */
 /* Larger than Desktop HD */
+/* RESUME
+   ========================================================================== */
+.resume-page {
+  position: fixed;
+  z-index: 12;
+  background: #F5F5F5;
+  width: 100%;
+  height: 100%; }
+  .resume-page .resume-content {
+    text-align: center;
+    max-height: 960px;
+    margin: 0 auto; }
+    .resume-page .resume-content h1, .resume-page .resume-content p {
+      color: #E94444; }
+  .resume-page img {
+    width: 200px; }
+
 @media screen and (max-width: 480px) {
   body {
     overflow-x: hidden; } }
