--- a/css/sass/main.scss
+++ b/css/sass/main.scss
@@ -18,7 +18,7 @@
 @import "pages/ux";
 @import "pages/interactive";
 @import "pages/prototype";
-@import "pages/resume";
+@import "pages/about";
 
 
 // Additional styles to think about
