--- a/css/sass/pages/_about.scss
+++ b/css/sass/pages/_about.scss
@@ -1,13 +1,13 @@
 /* RESUME
    ========================================================================== */
 
-.resume-page {
+.about-page {
 	position: fixed;
 	z-index: 12;
 	background: #F5F5F5;
 	width: 100%;
 	height: 100%;
-	.resume-content {
+	.about-content {
 		text-align: center;
 		max-height: 960px;
 		margin: 0 auto;
