--- a/css/sass/pages/_about.scss
+++ b/css/sass/pages/_about.scss
@@ -1,5 +1,7 @@
-/* RESUME
+/* ABOUT
    ========================================================================== */
+
+// mobile first
 
 .about-page {
 	position: fixed;
@@ -7,15 +9,36 @@
 	background: #F5F5F5;
 	width: 100%;
 	height: 100%;
+	h1, h4, p, li{
+		color: $salmon;
+	}
 	.about-content {
+		display: flex;
+		flex-direction: column;
 		text-align: center;
-		max-height: 960px;
+		max-width: 960px;
 		margin: 0 auto;
-			h1, p {
-			color: $salmon;
-			}
+		align-items: center;
+		justify-content: center;
 		}
-	img {
-		width: 200px;
+
+		li {
+			list-style-type: none;
+		}
+		.about-wrapper {
+		align-items: center;
+		display: flex;
+		flex-wrap: wrap;
+		.web-deveopment {
+			flex: 1;
+		}
+		.design {
+			flex: 1;
+		}
+		.tools {
+			flex: 1;
+		}
 	}
 }
+
+
