--- a/css/sass/components/_nav.scss
+++ b/css/sass/components/_nav.scss
@@ -21,7 +21,7 @@
 nav {
 	position: fixed;
 	z-index: 12;
-	background: #000;
+	// background: #000;
 	width: 100%;
 	height: 100%;
 	text-align: center;
@@ -45,7 +45,7 @@ nav {
 }
 
 .main-nav-hide, 
-.about-page-hide {
+.about-page-hide, {
 	display: none;
 }
 
@@ -55,7 +55,7 @@ nav {
 
 .navbar-toggle {
 	position: fixed;
-	top: 2%;
+	top: 4%;
 	right: 2%;
 	z-index: 20;
 	cursor: pointer;
