--- a/css/sass/base/_type.scss
+++ b/css/sass/base/_type.scss
@@ -46,6 +46,12 @@ a {
   }
 }
 
+/* GLOBAL TYPOGRAPHY
+   ========================================================================== */
+
+.quote-text {
+  font-size: 40px;
+}
 
 
 
