--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,220 @@
+/*!
+ * fullPage 2.8.6
+ * https://github.com/alvarotrigo/fullPage.js
+ * MIT licensed
+ *
+ * Copyright (C) 2013 alvarotrigo.com - A project by Alvaro Trigo
+ * Contribution by Jhony0311
+ */
+html.fp-enabled,
+.fp-enabled body {
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  /*Avoid flicker on slides transitions for mobile phones #336 */
+  -webkit-tap-highlight-color: transparent; }
+
+#superContainer {
+  height: 100%;
+  position: relative;
+  /* Touch detection for Windows 8 */
+  -ms-touch-action: none;
+  /* IE 11 on Windows Phone 8.1*/
+  touch-action: none; }
+
+.fp-section {
+  position: relative;
+  -webkit-box-sizing: border-box;
+  /* Safari<=5 Android<=3 */
+  -moz-box-sizing: border-box;
+  /* <=28 */
+  box-sizing: border-box; }
+
+.fp-slide {
+  float: left; }
+
+.fp-slide, .fp-slidesContainer {
+  height: 100%;
+  display: block; }
+
+.fp-slides {
+  z-index: 1;
+  height: 100%;
+  overflow: hidden;
+  position: relative;
+  -webkit-transition: all 0.3s ease-out;
+  /* Safari<=6 Android<=4.3 */
+  transition: all 0.3s ease-out; }
+
+.fp-section.fp-table, .fp-slide.fp-table {
+  display: table;
+  table-layout: fixed;
+  width: 100%; }
+
+.fp-tableCell {
+  display: table-cell;
+  vertical-align: middle;
+  width: 100%;
+  height: 100%; }
+
+.fp-slidesContainer {
+  float: left;
+  position: relative; }
+
+.fp-controlArrow {
+  -webkit-user-select: none;
+  /* webkit (safari, chrome) browsers */
+  -moz-user-select: none;
+  /* mozilla browsers */
+  -khtml-user-select: none;
+  /* webkit (konqueror) browsers */
+  -ms-user-select: none;
+  /* IE10+ */
+  position: absolute;
+  z-index: 4;
+  top: 50%;
+  cursor: pointer;
+  width: 0;
+  height: 0;
+  border-style: solid;
+  margin-top: -38px;
+  -webkit-transform: translate3d(0, 0, 0);
+  -ms-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0); }
+  .fp-controlArrow.fp-prev {
+    left: 15px;
+    width: 0;
+    border-width: 38.5px 34px 38.5px 0;
+    border-color: transparent #fff transparent transparent; }
+  .fp-controlArrow.fp-next {
+    right: 15px;
+    border-width: 38.5px 0 38.5px 34px;
+    border-color: transparent transparent transparent #fff; }
+
+.fp-scrollable {
+  overflow: scroll; }
+
+.fp-notransition {
+  -webkit-transition: none !important;
+  transition: none !important; }
+
+.fp-slidesNav {
+  position: absolute;
+  z-index: 4;
+  left: 50%;
+  opacity: 1; }
+  .fp-slidesNav.bottom {
+    bottom: 17px; }
+  .fp-slidesNav.top {
+    top: 17px; }
+
+#fp-nav ul,
+.fp-slidesNav ul {
+  margin: 0;
+  padding: 0; }
+  #fp-nav ul li,
+  .fp-slidesNav ul li {
+    display: block;
+    width: 14px;
+    height: 13px;
+    margin: 7px;
+    position: relative; }
+    #fp-nav ul li a,
+    .fp-slidesNav ul li a {
+      display: block;
+      position: relative;
+      z-index: 1;
+      width: 100%;
+      height: 100%;
+      cursor: pointer;
+      text-decoration: none; }
+      #fp-nav ul li a.active span,
+      .fp-slidesNav ul li a.active span {
+        height: 12px;
+        width: 12px;
+        margin: -6px 0 0 -6px;
+        border-radius: 100%; }
+        #fp-nav ul li:hover #fp-nav ul li a.active span,
+        #fp-slidesNav ul li:hover #fp-nav ul li a.active span, #fp-nav ul li:hover
+        .fp-slidesNav ul li a.active span,
+        #fp-slidesNav ul li:hover
+        .fp-slidesNav ul li a.active span {
+          height: 12px;
+          width: 12px;
+          margin: -6px 0 0 -6px;
+          border-radius: 100%; }
+      #fp-nav ul li a span,
+      .fp-slidesNav ul li a span {
+        border-radius: 50%;
+        position: absolute;
+        z-index: 1;
+        height: 4px;
+        width: 4px;
+        border: 0;
+        background: #333;
+        left: 50%;
+        top: 50%;
+        margin: -2px 0 0 -2px;
+        -webkit-transition: all 0.1s ease-in-out;
+        -moz-transition: all 0.1s ease-in-out;
+        -o-transition: all 0.1s ease-in-out;
+        transition: all 0.1s ease-in-out; }
+    #fp-nav ul li:hover a span,
+    .fp-slidesNav ul li:hover a span {
+      width: 10px;
+      height: 10px;
+      margin: -5px 0px 0px -5px; }
+
+#fp-nav {
+  position: fixed;
+  z-index: 100;
+  margin-top: -32px;
+  top: 50%;
+  opacity: 1;
+  -webkit-transform: translate3d(0, 0, 0); }
+  #fp-nav.right {
+    right: 17px; }
+  #fp-nav.left {
+    left: 17px; }
+  #fp-nav ul li .fp-tooltip {
+    position: absolute;
+    top: -2px;
+    color: #fff;
+    font-size: 14px;
+    font-family: arial, helvetica, sans-serif;
+    white-space: nowrap;
+    max-width: 220px;
+    overflow: hidden;
+    display: block;
+    opacity: 0;
+    width: 0;
+    cursor: pointer; }
+    #fp-nav ul li .fp-tooltip.right {
+      right: 20px; }
+  #fp-nav ul li:hover .fp-tooltip {
+    -webkit-transition: opacity 0.2s ease-in;
+    transition: opacity 0.2s ease-in;
+    width: auto;
+    opacity: 1; }
+  #fp-nav.fp-show-active a.active + .fp-tooltip {
+    -webkit-transition: opacity 0.2s ease-in;
+    transition: opacity 0.2s ease-in;
+    width: auto;
+    opacity: 1; }
+
+.fp-slidesNav ul li {
+  display: inline-block; }
+
+.fp-auto-height.fp-section,
+.fp-auto-height .fp-slide,
+.fp-auto-height .fp-tableCell {
+  height: auto !important; }
+
+.fp-responsive .fp-auto-height-responsive.fp-section,
+.fp-responsive .fp-auto-height-responsive .fp-slide,
+.fp-responsive .fp-auto-height-responsive .fp-tableCell {
+  height: auto !important; }
+
 /* Consistent settings */
 /* Colors */
 /* project colors */
@@ -126,6 +343,11 @@ a {
   color: #1271db; }
   a:hover, a:focus {
     text-decoration: none; }
+
+/* GLOBAL TYPOGRAPHY
+   ========================================================================== */
+.quote-text {
+  font-size: 40px; }
 
 .btn {
   border-radius: 5px;
@@ -304,10 +526,6 @@ nav {
  * RIGHT VERTICAL NAV BAR
  * Have turned off for now
  */
-#fp-nav ul li a span, .fp-slidesNav ul li a span {
-  background: #E94444;
-  display: none; }
-
 * {
   box-sizing: border-box !important; }
 
@@ -427,31 +645,47 @@ hr {
  */
 .ux {
   text-align: center; }
-  .ux h1 {
-    font-size: 1.5em;
+  .ux h1, .ux h2, .ux h3 {
     font-family: Gotham_medium, sans-serif;
     text-transform: uppercase; }
+  .ux h1 {
+    font-size: 1.5em; }
   .ux p {
     font-size: 0.7em;
     margin: 0 2em 2em; }
 
 .ux-slide-01 {
-  background: #ff6969; }
+  background: #1f2a52;
+  display: flex;
+  text-align: left; }
+  .ux-slide-01 .p-symbol-container {
+    width: 65%;
+    fill: #24305e;
+    opacity: 0.7; }
+  .ux-slide-01 article {
+    z-index: 1000; }
   .ux-slide-01 .wrapper-container {
-    display: flex;
-    flex-direction: column; }
-    .ux-slide-01 .wrapper-container .ux-image {
-      width: 35%;
-      margin: 100px auto 0; }
-      .ux-slide-01 .wrapper-container .ux-image img {
-        width: 100%; }
+    flex-direction: column;
+    max-width: 960px;
+    margin: 0 auto; }
 
 .ux-slide-02 {
   background: #ffb5bf; }
-  .ux-slide-02 .screens-container {
+  .ux-slide-02 .wrapper-container {
+    display: flex;
+    flex-direction: column; }
+    .ux-slide-02 .wrapper-container .ux-image {
+      width: 35%;
+      margin: 100px auto 0; }
+      .ux-slide-02 .wrapper-container .ux-image img {
+        width: 100%; }
+
+.ux-slide-03 {
+  background: #ffb5bf; }
+  .ux-slide-03 .screens-container {
     margin: 0 auto;
     width: 55%; }
-  .ux-slide-02 .screen img {
+  .ux-slide-03 .screen img {
     width: 100%;
     margin-bottom: 20px; }
 
@@ -465,9 +699,9 @@ hr {
  * LARGER THAN PHAMBLET
  */
 @media (min-width: 550px) {
-  .ux-slide-02 {
+  .ux-slide-03 {
     display: flex; }
-    .ux-slide-02 .wrapper-container {
+    .ux-slide-03 .wrapper-container {
       display: flex;
       flex-wrap: wrap;
       max-width: 960px;
@@ -475,33 +709,33 @@ hr {
       align-items: center;
       justify-content: center;
       flex-direction: column; }
-      .ux-slide-02 .wrapper-container .screens-container {
+      .ux-slide-03 .wrapper-container .screens-container {
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
         margin: 0 auto;
         width: 60%; }
-      .ux-slide-02 .wrapper-container .screen {
+      .ux-slide-03 .wrapper-container .screen {
         flex: 0 1 40%; } }
 
 /**
  * LARGER THAN TABLET
  */
 @media screen and (min-width: 750px) {
-  .ux-slide-01 {
+  .ux-slide-02 {
     display: flex; }
-    .ux-slide-01 .wrapper-container {
+    .ux-slide-02 .wrapper-container {
       flex-direction: row;
       max-width: 960px;
       margin: 0 auto;
       align-items: center; }
-      .ux-slide-01 .wrapper-container .ux-image {
+      .ux-slide-02 .wrapper-container .ux-image {
         flex: 1; }
-      .ux-slide-01 .wrapper-container .ux-slide01-text {
+      .ux-slide-02 .wrapper-container .ux-slide01-text {
         flex: 3; }
-  .ux-slide-02 .wrapper-container .screens-container {
+  .ux-slide-03 .wrapper-container .screens-container {
     width: 80%; }
-  .ux-slide-02 .wrapper-container .screen {
+  .ux-slide-03 .wrapper-container .screen {
     flex: 0 1 20%; } }
 
 /* Larger than desktop */
