--- a/css/sass/components/_nav.scss
+++ b/css/sass/components/_nav.scss
@@ -156,10 +156,10 @@ nav {
  * Have turned off for now
  */
 
-#fp-nav ul li a span, .fp-slidesNav ul li a span {
-		background: $salmon;
-		display: none;
-	}
+// #fp-nav ul li a span, .fp-slidesNav ul li a span {
+// 		background: $salmon;
+// 		display: none;
+// 	}
 
 
 
