--- a/css/main.css
+++ b/css/main.css
@@ -151,7 +151,7 @@ html.fp-enabled,
         height: 4px;
         width: 4px;
         border: 0;
-        background: #333;
+        background: #fff;
         left: 50%;
         top: 50%;
         margin: -2px 0 0 -2px;
@@ -657,31 +657,31 @@ hr {
 .ux-slide-01 {
   background: #1f2a52;
   display: flex;
-  z-index: -10; }
+  align-items: center;
+  justify-content: center; }
   .ux-slide-01 .p-symbol-container {
-    width: 65%;
+    position: absolute;
     fill: #24305e;
-    opacity: 0.7;
-    z-index: -1; }
-  .ux-slide-01 article {
-    margin-left: 60px;
-    text-align: left; }
-    .ux-slide-01 article h3 {
-      margin-bottom: 20px;
+    width: 80%;
+    top: 50%;
+    left: 50%;
+    opacity: 0.5;
+    transform: translate(-50%, -50%); }
+  .ux-slide-01 section {
+    margin: 0 10px;
+    position: relative; }
+    .ux-slide-01 section h3 {
+      margin-bottom: 5px;
       color: #dd5d5f; }
-    .ux-slide-01 article p {
-      margin-left: 0;
-      font-size: 1.3em;
-      color: #5870cf; }
-    .ux-slide-01 article .quote-text {
+    .ux-slide-01 section .quote-text {
       font-family: avant_bold, sans-serif;
-      font-size: 3em;
+      font-size: 2.5em;
       line-height: 1em;
       margin-bottom: 5px; }
-  .ux-slide-01 .wrapper-container {
-    flex-direction: column;
-    max-width: 960px;
-    margin: 0 auto; }
+    .ux-slide-01 section p {
+      margin-left: 0;
+      font-size: 1.1em;
+      color: #5870cf; }
 
 .ux-slide-02 {
   background: #ffb5bf; }
@@ -713,6 +713,34 @@ hr {
  * LARGER THAN PHAMBLET
  */
 @media (min-width: 550px) {
+  .ux-slide-01 {
+    background: #1f2a52;
+    display: flex;
+    align-items: center;
+    justify-content: center; }
+    .ux-slide-01 .p-symbol-container {
+      position: absolute;
+      fill: #24305e;
+      width: 65%;
+      top: 50%;
+      left: 50%;
+      opacity: 0.5;
+      transform: translate(-50%, -50%); }
+    .ux-slide-01 section {
+      position: relative;
+      margin-left: 90px; }
+      .ux-slide-01 section h3 {
+        margin-bottom: 5px;
+        color: #dd5d5f; }
+      .ux-slide-01 section .quote-text {
+        font-family: avant_bold, sans-serif;
+        font-size: 2.5em;
+        line-height: 1em;
+        margin-bottom: 5px; }
+      .ux-slide-01 section p {
+        margin-left: 0;
+        font-size: 1.1em;
+        color: #5870cf; }
   .ux-slide-03 {
     display: flex; }
     .ux-slide-03 .wrapper-container {
@@ -736,6 +764,15 @@ hr {
  * LARGER THAN TABLET
  */
 @media screen and (min-width: 750px) {
+  .ux-slide-01 .p-symbol-container {
+    width: 50%; }
+  .ux-slide-01 section {
+    text-align: left;
+    margin-left: 90px; }
+    .ux-slide-01 section .quote-text {
+      font-size: 2.5em; }
+    .ux-slide-01 section p {
+      margin-left: 0; }
   .ux-slide-02 {
     display: flex; }
     .ux-slide-02 .wrapper-container {
@@ -753,7 +790,38 @@ hr {
     flex: 0 1 20%; } }
 
 /* Larger than desktop */
+@media (min-width: 1000px) {
+  .ux-slide-01 .p-symbol-container {
+    width: 50%; }
+  .ux-slide-01 section {
+    margin-left: 60px; }
+    .ux-slide-01 section h3 {
+      margin-bottom: 10px;
+      color: #dd5d5f; }
+    .ux-slide-01 section .quote-text {
+      font-size: 3em; }
+    .ux-slide-01 section p {
+      font-size: 1.3em; } }
+
 /* Larger than Desktop HD */
+@media (min-width: 1200px) {
+  .ux-slide-01 .wrapper-container {
+    max-width: 960px;
+    margin: 0 auto; }
+  .ux-slide-01 .p-symbol-container {
+    width: 40%; }
+  .ux-slide-01 section {
+    margin-left: 120px; }
+    .ux-slide-01 section h3 {
+      margin-bottom: 20px;
+      font-size: 2em; }
+    .ux-slide-01 section .quote-text {
+      font-family: avant_bold, sans-serif;
+      font-size: 3.5em;
+      line-height: 1em; }
+    .ux-slide-01 section p {
+      font-size: 1.5em; } }
+
 /* Interactiive */
 /* Mobile first queries */
 .interactive {
