--- a/css/main.css
+++ b/css/main.css
@@ -61,36 +61,6 @@ html.fp-enabled,
   float: left;
   position: relative; }
 
-.fp-controlArrow {
-  -webkit-user-select: none;
-  /* webkit (safari, chrome) browsers */
-  -moz-user-select: none;
-  /* mozilla browsers */
-  -khtml-user-select: none;
-  /* webkit (konqueror) browsers */
-  -ms-user-select: none;
-  /* IE10+ */
-  position: absolute;
-  z-index: 4;
-  top: 50%;
-  cursor: pointer;
-  width: 0;
-  height: 0;
-  border-style: solid;
-  margin-top: -38px;
-  -webkit-transform: translate3d(0, 0, 0);
-  -ms-transform: translate3d(0, 0, 0);
-  transform: translate3d(0, 0, 0); }
-  .fp-controlArrow.fp-prev {
-    left: 15px;
-    width: 0;
-    border-width: 38.5px 34px 38.5px 0;
-    border-color: transparent #fff transparent transparent; }
-  .fp-controlArrow.fp-next {
-    right: 15px;
-    border-width: 38.5px 0 38.5px 34px;
-    border-color: transparent transparent transparent #fff; }
-
 .fp-scrollable {
   overflow: scroll; }
 
@@ -99,6 +69,7 @@ html.fp-enabled,
   transition: none !important; }
 
 .fp-slidesNav {
+  display: none;
   position: absolute;
   z-index: 4;
   left: 50%;
@@ -110,6 +81,7 @@ html.fp-enabled,
 
 #fp-nav ul,
 .fp-slidesNav ul {
+  display: none;
   margin: 0;
   padding: 0; }
   #fp-nav ul li,
@@ -166,6 +138,7 @@ html.fp-enabled,
       margin: -5px 0px 0px -5px; }
 
 #fp-nav {
+  display: none;
   position: fixed;
   z-index: 100;
   margin-top: -32px;
@@ -684,7 +657,7 @@ hr {
       color: #5870cf; }
 
 .ux-slide-02 {
-  background: #ffb5bf; }
+  background: #1f2a52; }
   .ux-slide-02 .wrapper-container {
     display: flex;
     flex-direction: column; }
@@ -695,7 +668,7 @@ hr {
         width: 100%; }
 
 .ux-slide-03 {
-  background: #ffb5bf; }
+  background: #1f2a52; }
   .ux-slide-03 .screens-container {
     margin: 0 auto;
     width: 55%; }
