--- a/css/sass/pages/_ux.scss
+++ b/css/sass/pages/_ux.scss
@@ -36,6 +36,7 @@
 			transform: translate(-50%, -50%);
 		}
 		section {
+			// opacity: 0;
 			margin: 0 10px;
 			position: relative;
 			h3 {
@@ -58,7 +59,8 @@
 
 
 .ux-slide-02 {
-	background: #ffb5bf;
+	background: #1f2a52;
+	// background: #ffb5bf;
 	.wrapper-container {
 		display: flex;
 		flex-direction: column;
@@ -73,7 +75,8 @@
 }
 
 .ux-slide-03 {
-	background: #ffb5bf;
+	background: #1f2a52;
+	// background: #ffb5bf;
 	.screens-container {
 		margin: 0 auto;
 		width: 55%;
