--- a/css/sass/base/_type.scss
+++ b/css/sass/base/_type.scss
@@ -4,6 +4,7 @@
 @font-face { font-family: Gotham_thin; src: url(../fonts/GOTHAM-LIGHT.TTF);}
 
 // AVANTGARDE
+@font-face { font-family: avant_light; src: url(../fonts/ITCAvantGardePro-XLt.otf);}
 @font-face { font-family: avant_book; src: url(../fonts/ITCAvantGardePro-Bk.otf);}
 @font-face { font-family: avant_medium; src: url(../fonts/ITCAvantGardePro-Md.otf);}
 @font-face { font-family: avant_bold; src: url(../fonts/ITCAvantGardePro-Bold.otf);}
@@ -12,16 +13,20 @@ $body: Gotham_thin, sans-serif;
 $medium: Gotham_medium, sans-serif;
 $bold: Gotham_black, sans-serif;
 
+$light_avant: avant_light, sans-serif;
 $body_avant: avant_book, sans-serif;
 $medium_avant: avant_medium, sans-serif;
 $bold_avant: avant_bold, sans-serif;
 
+
+p {
+  margin: 0;
+}
+
 body, 
 p {
-  font-family: $body, "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-  font-size: 100%;
-  font-style: normal;
-  font-weight: 400;
+  font-family: $light_avant, "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  font-size: 14px;
   line-height: 1.6;
   color: $reverse;
 }
@@ -30,12 +35,17 @@ h1,
 h2,
 h3,
 h4,
-h5 {
-  font-family: $medium, "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-  color: $reverse;
-  margin: 0px;
-}
+h5,
+h6 {
+    -webkit-margin-before: 0;
+    -webkit-margin-after: 0;
+    -webkit-margin-start: 0;
+    -webkit-margin-end: 0;
 
+    font-family: $medium, "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+    color: $reverse;
+    margin: 0px;
+}
 
 a {
   color: $primary-color;
@@ -50,7 +60,8 @@ a {
    ========================================================================== */
 
 .quote-text {
-  font-size: 40px;
+  font-size: 2.5em;
+  font-family: $bold_avant;
 }
 
 
