--- a/css/sass/base/_config.scss
+++ b/css/sass/base/_config.scss
@@ -57,4 +57,5 @@ $subtle-color: $grey; // Subtle color for subtle text
 /* global background color */
 html {
 	background: $dark-blue;
+	z-index: -10;
 }
