add change background ux

--- a/css/sass/pages/_ux.scss
+++ b/css/sass/pages/_ux.scss
@@ -46,7 +46,7 @@
 
 
 .ux-slide-02 {
-	background: #1f2a52;
+	// background: #1f2a52;
 	.wrapper-container {
 		display: flex;
 		flex-direction: column;
@@ -61,7 +61,7 @@
 }
 
 .ux-slide-03 {
-	background: #1f2a52;
+	// background: #1f2a52;
 	.screens-container {
 		margin: 0 auto;
 		width: 55%;
