--- a/css/sass/base/_config.scss
+++ b/css/sass/base/_config.scss
@@ -56,6 +56,5 @@ $subtle-color: $grey; // Subtle color for subtle text
 
 /* global background color */
 html {
-	background: $dark-blue;
-	z-index: -10;
+	// background: $dark-blue;
 }
